# ChildTimeGuard

./: .gitignore  CMakeLists.txt  README.md
src/app/: App.cpp  main.cpp
src/config/: AppConfig.cpp  ConfigManager.cpp  JsonConfigStore.cpp
src/core/: TimeController.cpp
src/i18n/: ResourceManager.cpp  language.json
src/include/: App.h  AppConfig.h  AppMessages.h  AutoStartManager.h  Base64Util.h  ConfigDialog.h  ConfigManager.h  ControlDialog.h  HotkeyManager.h  JsonConfigStore.h  LockScreenWindow.h  ReminderDialog.h  ResourceManager.h  ShutdownController.h  StringUtils.h  TimeController.h  TimeUtils.h  resource.h
src/platform/: AutoStartManager.cpp  HotkeyManager.cpp  ShutdownController.cpp
src/res/: ChildTimeGuard.rc  version_build.h.in
src/ui/: ConfigDialog.cpp  ControlDialog.cpp  LockScreenWindow.cpp  ReminderDialog.cpp
src/utils/: Base64Util.cpp  StringUtils.cpp  TimeUtils.cpp
tests/: TestFramework.h  TestHashAndConfig.cpp  TestJsonConfigStore.cpp  TestResourceManager.cpp  TestStringUtils.cpp  TestTimeController.cpp  TestTimeUtils.cpp  main.cpp
